--- a/NMTickerView/Base.lproj/Main.storyboard
+++ b/NMTickerView/Base.lproj/Main.storyboard
@@ -1,25 +1,120 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Hd4-nR-OgR">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NMTickerView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j57-kG-Jq3">
+                                <rect key="frame" x="62" y="271" width="250" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="KpN-Qw-wMd"/>
+                                    <constraint firstAttribute="width" constant="250" id="uCa-gq-M1k"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
+                                <state key="normal" title="Show Ticker View">
+                                    <color key="titleColor" red="0.074509803920000006" green="0.58431372550000005" blue="0.87450980389999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="dG9-Z0-Get" kind="show" id="HHY-8Q-oBc"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="j57-kG-Jq3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="LK9-Ae-BNn"/>
+                            <constraint firstItem="j57-kG-Jq3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f08-8U-QbH"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Home" id="w33-bL-Aak"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="770.5" y="-293.5"/>
+        </scene>
+        <!--Ticker View Controller-->
+        <scene sceneID="MfV-lo-dcw">
+            <objects>
+                <viewController id="dG9-Z0-Get" customClass="TickerViewController" customModule="NMTickerView" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Eyn-Ek-Eqr"/>
+                        <viewControllerLayoutGuide type="bottom" id="80L-ub-uUh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Sub-HT-93y">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="graph.png" translatesAutoresizingMaskIntoConstraints="NO" id="BzM-uP-d3L">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="ciF-ad-42I"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iyc-dN-TeM" customClass="NMTickerView" customModule="NMTickerView" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="200" width="375" height="60"/>
+                                <color key="backgroundColor" red="0.074509803920000006" green="0.58431372550000005" blue="0.87450980389999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="5sU-zV-FOW"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BzM-uP-d3L" firstAttribute="top" secondItem="Eyn-Ek-Eqr" secondAttribute="bottom" id="FGU-S8-sM4"/>
+                            <constraint firstAttribute="trailing" secondItem="iyc-dN-TeM" secondAttribute="trailing" id="LP6-oK-286"/>
+                            <constraint firstItem="iyc-dN-TeM" firstAttribute="top" secondItem="BzM-uP-d3L" secondAttribute="bottom" id="Nx8-Qp-xHL"/>
+                            <constraint firstAttribute="trailing" secondItem="BzM-uP-d3L" secondAttribute="trailing" id="OVB-2i-w7N"/>
+                            <constraint firstItem="iyc-dN-TeM" firstAttribute="leading" secondItem="Sub-HT-93y" secondAttribute="leading" id="XxD-e6-KTe"/>
+                            <constraint firstItem="BzM-uP-d3L" firstAttribute="leading" secondItem="Sub-HT-93y" secondAttribute="leading" id="q7G-Xu-j8r"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="TickerView" destination="iyc-dN-TeM" id="ZlL-St-sKl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OBy-PA-YT4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1306.5" y="-293.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eGF-Vg-Se8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hd4-nR-OgR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="idl-Nr-kYs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.01176470588" green="0.14901960780000001" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.011764705882352941" green="0.14901960784313725" blue="0.27450980392156865" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ZUb-cE-yjS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eA0-6N-2vQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="273" y="-293"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="graph.png" width="700" height="355"/>
+    </resources>
 </document>
